// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Turtle should match snapshot 1`] = `
<styled.div>
  <styled.div>
    <Battery
      percentage={42}
    />
  </styled.div>
  <styled.div>
    <p>
      Turtle 
      2
    </p>
  </styled.div>
  <styled.div>
    <Dropdown
      currentValue="Goalkeeper"
      enabled={false}
      id="turtle2__role"
      onChange={[Function]}
      values={
        Array [
          "INACTIVE",
          "ROLE_NONE",
          "Att main",
          "Att assist",
          "Def main",
          "Def assist",
          "Def assist 2",
          "Goalkeeper",
        ]
      }
    />
    <Dropdown
      currentValue="Blue home"
      enabled={false}
      id="turtle2__home"
      onChange={[Function]}
      values={
        Array [
          "Yellow home",
          "Blue home",
        ]
      }
    />
    <Dropdown
      currentValue="Cyan"
      enabled={false}
      id="turtle2__team"
      onChange={[Function]}
      values={
        Array [
          "Magenta",
          "Cyan",
        ]
      }
    />
  </styled.div>
</styled.div>
`;

exports[`Turtle the user changes dropdown values should change the home 1`] = `
Object {
  "body": "{\\"2\\":{\\"homegoal\\":\\"yellow\\"}}",
  "method": "PUT",
}
`;

exports[`Turtle the user changes dropdown values should change the role 1`] = `
Object {
  "body": "{\\"2\\":{\\"role\\":\\"inactive\\"}}",
  "method": "PUT",
}
`;

exports[`Turtle the user changes dropdown values should change the team 1`] = `
Object {
  "body": "{\\"2\\":{\\"teamcolor\\":\\"magenta\\"}}",
  "method": "PUT",
}
`;
